Updated Video Source

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 		<div id="container">
 			<div id="labels"></div>
 			<div id="overlay" hidden="false">
-				<video id="video" controls width="300"> <source src="/Spring - Blender Open Movie-360p.mp4" type="video/mp4"></video>
+				<video id="video" controls width="300"> <source src="/webhost-sample/Spring - Blender Open Movie-360p.mp4" type="video/mp4"></video>
 				<!-- iframe title="Sprite Fright" width="300" height="300"
 					src="https://www.youtube.com/embed/_cMxraX_5RE?start=7" frameborder="0"
 					allow="accelerometer; clipboard-write; encrypted-media; autoplay;" style="margin:auto ;" >
