Added pointer update to OnClick

--- a/index.html
+++ b/index.html
@@ -156,6 +156,10 @@
 		// Manage inputs
 		function onClick(event) {
 			console.info('Click Event');
+
+			pointer.x = (event.clientX / window.innerWidth) * 2 - 1;
+			pointer.y = - (event.clientY / window.innerHeight) * 2 + 1;
+
 			raycaster.setFromCamera(pointer, camera);
 
 			// calculate objects intersecting the picking ray
